--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,38 @@ img {
   display: block;
   max-width: 100%;
 }
+
+timer {
+  text-align: center;
+  height: 130px;
+  width: 100%;
+  margin: 0 auto;
+  background: rgba(196, 196, 196, 0.8);
+  cursor: default;
+}
+
+/*       текст под цифрами       */
+label {
+  font-size: 55px;
+  font-family: DS-Digital;
+  font-weight: 600;
+  margin: 0 auto;
+}
+
+/*         цифры таймера         */
+value {
+  font-size: 18px;
+  font-family: 'Lato Light', sans-serif;
+}
+
+/*      блоки хранящие цифры      */
+field {
+  background: white;
+  margin: 10px;
+  padding: 5px;
+  border-radius: 10px;
+  width: 70px;
+  height: 70px;
+  display: flex;
+  align-items: center;
+}
