--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,7 +17,8 @@ img {
   max-width: 100%;
 }
 
-timer {
+.timer {
+  display: flex;
   text-align: center;
   height: 130px;
   width: 100%;
@@ -27,27 +28,29 @@ timer {
 }
 
 /*       текст под цифрами       */
-label {
-  font-size: 55px;
+.label {
+  font-size: 23px;
   font-family: DS-Digital;
-  font-weight: 600;
+  font-weight: 100;
   margin: 0 auto;
 }
 
 /*         цифры таймера         */
-value {
+.value {
   font-size: 18px;
   font-family: 'Lato Light', sans-serif;
 }
 
 /*      блоки хранящие цифры      */
-field {
-  background: white;
-  margin: 10px;
-  padding: 5px;
-  border-radius: 10px;
-  width: 70px;
-  height: 70px;
+.field {
+  margin-right: 50px;
+  margin-left: 20px;
+  margin-top: 20px;
+  justify-content: center;
+  width: 20px;
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: medium;
+  font-weight: 100;
 }
